samples/_failures_safe/1761040014_b8b66f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38edfa0a.c: In function ‘main’:
./samples/SAFE/__tmp_38edfa0a.c:159:33: error: expected ‘;’ at end of input
  159 |                 transpose_matrix
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_38edfa0a.c:159:17: error: expected declaration or statement at end of input
  159 |                 transpose_matrix
      |                 ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_38edfa0a.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38edfa0a.c:159:17: error: expected declaration or statement at end of input
